--- a/card.css
+++ b/card.css
@@ -1,9 +1,3 @@
-:root {
-  --color-primary: #99c5c8;
-  --color-secondary: #ccc;
-  --color-dark: #343537;
-  --color-light: #ffffff;
-}
 
 * {
   margin: 0;
@@ -25,7 +19,7 @@ body {
 }
 
 .bg-dark {
-  background-color: var(--color-dark);
+  background-color: #343537;
 }
 
 .color-primary {
